<resources>
    <string name="app_name">E-Notice</string>
    <string name="student_login">STUDENT LOGIN</string>
    <string name="faculty_login">FACULTY LOGIN</string>
    <string name="admin_login">ADMIN LOGIN</string>
    <string name="welcome_description">Welcome to E-notice App</string>
    <string name="admin_description">Welcome to admin activities page</string>
    <string name="student_registration_description">Welcome to student registration</string>
    <string name="name_hint">Enter Name</string>
    <string name="email_hint">Enter Email</string>
    <string name="mobile_hint">Enter Mobile Number</string>
    <string name="branch_hint">Enter Branch</string>
    <string name="create_group">CREATE A GROUP</string>
    <string name="create_student">ADD A MEMBER</string>
    <string name="logout">LOGOUT</string>
    <string name="notice_title">Notice Title</string>
    <string name="notice_subtitle">Notice SubTitle</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="select_group">Select Group</string>
    <string name="attach_document">Attach a Document</string>
    <string name="post_notice">POST AS NOTICE</string>
    <string name="post_news">POST AS NEWS</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="enter_group_admin_name">Enter Group Admin Name</string>
    <string name="create">CREATE</string>
    <string name="add_notice">Add Notice</string>
    <string name="college_name">Pimpri Chinchwad College of Engineering, Pune</string>
    <string name="college_logo_desc">College logo</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="comment">Comment</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="branch">Branch</string>
    <string name="image">Image</string>
    <string name="update">UPDATE</string>
    <string name="register">REGISTER</string>
    <string name="group_name">Group Name</string>
    <string name="search_student">Search Student</string>
    <string name="search_group">Search Group</string>
    <string name="attached_image">Attached Image</string>
    <string name="add_achievement">Add Achievement</string>
    <string name="send_button">Send</string>
    <string name="profile_img">Profile Image</string>
</resources>