<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">


    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="148dp"
        android:layout_height="179dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/image"
        android:padding="5dp"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/edit_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:enabled="false"
        android:gravity="start"
        android:hint="@string/bio"
        android:lines="5"
        android:maxLines="5"
        android:padding="10dp"
        android:textColor="@color/black"
        android:autofillHints=""
        android:inputType="text" />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:enabled="false"
        android:hint="@string/name"
        android:padding="10dp"
        android:textColor="@color/black"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:enabled="false"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_branch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:enabled="false"
        android:hint="@string/branch"
        android:padding="10dp"
        android:textColor="@color/black"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:enabled="false"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:padding="10dp"
        android:textColor="@color/black"
        android:autofillHints="" />


</LinearLayout>