<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_weight="7"
    tools:context=".RegisterStudentActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1.5"
        android:contentDescription="@string/student_registration_description"
        android:padding="30dp"
        android:src="@drawable/student_registration" />


    <EditText
        android:id="@+id/edit_enter_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:autofillHints=""
        android:hint="@string/name_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="@dimen/text_Size" />

    <EditText
        android:id="@+id/edit_enter_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:autofillHints=""
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="@dimen/text_Size" />

    <EditText
        android:id="@+id/edit_enter_mobile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:autofillHints=""
        android:hint="@string/mobile_hint"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="@dimen/text_Size" />


    <EditText
        android:id="@+id/edit_enter_branch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:autofillHints=""
        android:hint="@string/branch_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="@dimen/text_Size" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.4"
        android:backgroundTint="#1b07b0"
        android:padding="0dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="@dimen/text_Size"
        android:textStyle="bold" />

</LinearLayout>
