<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:contentDescription="@string/college_logo_desc"
        android:padding="0dp"
        android:src="@drawable/logo_pccoe" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/college_name"
        android:textSize="@dimen/text_Size"
        android:gravity="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edit_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="@dimen/text_Size"
        android:gravity="center"
        android:hint="@string/enter_username"
        android:padding="10dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="@dimen/text_Size"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:padding="10dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:textSize="@dimen/text_Size"
        android:padding="10dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:backgroundTint="#1b07b0"
        android:textColor="@color/white" />


</LinearLayout>