<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/edit_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/search_student"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


        </LinearLayout>


        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/profile_img" />

        <EditText
            android:id="@+id/edit_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:gravity="start"
            android:hint="@string/bio"
            android:lines="5"
            android:maxLines="5"
            android:padding="10dp"
            android:textColor="@color/black"
            android:autofillHints=""
            android:inputType="text" />


        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:hint="@string/name"
            android:padding="10dp"
            android:textColor="@color/black"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:hint="@string/email"
            android:padding="10dp"
            android:textColor="@color/black"
            android:autofillHints=""
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:hint="@string/branch"
            android:padding="10dp"
            android:textColor="@color/black"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:padding="10dp"
            android:textColor="@color/black"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/update"
            android:textSize="@dimen/text_Size"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:backgroundTint="#1b07b0"
            android:textColor="@color/white" />


    </LinearLayout>
</ScrollView>
