<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NoticeDetailsActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_Size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/description"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/image_"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/attached_image"
        android:padding="10dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/edit_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:autofillHints=""
            android:hint="@string/comment"
            android:inputType="text"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/image_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/send_button"
            android:src="@drawable/ic_baseline_send_24" />

    </LinearLayout>

    <ListView
        android:id="@+id/listview_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp" />


</LinearLayout>