<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AddNoticeActivity">

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_title"
            android:padding="10dp"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:hint="@string/enter_description"
            android:lines="3"
            android:maxLines="3"
            android:padding="10dp"
            android:autofillHints=""
            android:inputType="text" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_attach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/attach_document"
            android:backgroundTint="#1b07b0"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/attached_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_post_notice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:text="@string/post_notice"
                android:backgroundTint="#1b07b0"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_post_news"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:text="@string/post_news"
                android:backgroundTint="#1b07b0"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>


