<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_weight="5.1"
    tools:context=".AdminHomeActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/admin_description"
        android:src="@drawable/admin" />

    <Button
        android:id="@+id/btn_create_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="0.4"
        android:backgroundTint="#1b07b0"
        android:padding="0dp"
        android:text="@string/create_group"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_Size" />


    <Button
        android:id="@+id/btn_create_student"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="0.4"
        android:backgroundTint="#1b07b0"
        android:padding="0dp"
        android:text="@string/create_student"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_Size" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="0.4"
        android:backgroundTint="#1b07b0"
        android:padding="0dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_Size" />


</LinearLayout>