<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="5.1"
    tools:context=".WelcomeActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="50dp"
        android:src="@drawable/logo_pccoe"
        android:contentDescription="@string/welcome_description" />


    <Button
        android:id="@+id/btn_student"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="0.5"
        android:backgroundTint="#1b07b0"
        android:padding="0dp"
        android:text="@string/student_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_Size" />

    <Button
        android:id="@+id/btn_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="0.5"
        android:backgroundTint="#1b07b0"
        android:padding="0dp"
        android:text="@string/faculty_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_Size" />

    <Button
        android:id="@+id/btn_admin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="0.5"
        android:backgroundTint="#1b07b0"
        android:padding="0dp"
        android:text="@string/admin_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_Size" />


</LinearLayout>