<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CreateGroupActivity">

    <EditText
        android:id="@+id/edit_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_group_name"
        android:padding="10dp"
        android:textColor="@color/black"
        android:autofillHints=""
        android:inputType="text" />

    <Spinner
        android:id="@+id/edit_group_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_group_admin_name"
        android:padding="10dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/create"
        android:textSize="@dimen/text_Size"
        android:textAllCaps="false"
        android:backgroundTint="#1b07b0"
        android:textColor="@color/white" />

</LinearLayout>